# Recommendation-system-social-network

./: .gitignore  1. Download data and EDA.ipynb  2. Create features.ipynb  3. train model .ipynb  4. test service.ipynb  README.md  main.py  pyproject.toml  requirements.txt
FastAPI/: .env  app.py  database.py  describe .md  load_features.py  load_models.py  table_feed.py  table_post.py  table_user.py
Recommendation-system-social-network/: README.md  README.txt  requirements.txt
Recommendation-system-social-network/FastAPI/: app.py
app/: app.py  main.py
app/database/: database.py
app/database/models/: feed.py  post.py  user.py
app/database/schemas/: schema.py
app/ml/: load_models.py
app/recommendations/: load_features.py  router.py  service.py
app/routers/: rec_post.py
app/services/: load_features.py  recommendation_service.py
config/: settings.py
notebooks/: 1. Download data and EDA.ipynb  2. Create features.ipynb  3. train model .ipynb  4. test service.ipynb
