[tool.poetry]
name = "recommendation-system-social-network"
version = "0.1.0"
description = ""
authors = ["valentinpatrakeev <patrakeevvalentin@gmail.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "0.75.1"
pandas = "1.4.2"
sqlalchemy = "1.4.35"
requests = "2.27.1"
catboost = "1.0.6"
pydantic = "1.9.1"
scikit-learn = "1.1.1"
psycopg2-binary = "2.9.3"
uvicorn = "0.16.0"
category-encoders = "2.5.0"
loguru = "0.6.0"
implicit = "0.5.2"
python-dotenv = "1.0.0"
numpy = "^1.21.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]

start-api = "uvicorn main:app --host 0.0.0.0 --port 8000"