[tool.poetry]
name = "recommendation-system-social-network"
version = "0.1.0"
description = ""
authors = ["valentinpatrakeev <patrakeevvalentin@gmail.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "0.75.1"
pandas = "1.4.2"
sqlalchemy = "1.4.35"
catboost = "1.0.6"
pydantic = "1.9.1"
uvicorn = "0.16.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]

start-api = "uvicorn app.main:app --host 0.0.0.0 --port 8000"